# pataphix

./: README.md  pyproject.toml
pataphix/: pataphix.py
