[project]
name = "pataphix"
version = "0.1.0"
description = ""
authors = [
    {name = "Adelme Bazin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysam (>=0.23.3,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pataphix = "pataphix.pataphix:main"
